Restored compatibility with java 17